-- AdaptiveQuiz
-- PostgreSQL 17
-- V1 - Esquema base
-- Nombres de tablas y columnas en español.
-- Prefijos funcionales alineados a la filosofía VAEF.

CREATE TABLE CAT_CATALOGO (
    id_catalogo BIGINT GENERATED BY DEFAULT AS IDENTITY,
    codigo VARCHAR(50) NOT NULL,
    nombre VARCHAR(120) NOT NULL,
    descripcion VARCHAR(500),
    activo BOOLEAN NOT NULL DEFAULT TRUE,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_CAT_CATALOGO PRIMARY KEY (id_catalogo),
    CONSTRAINT UK_CAT_CATALOGO_CODIGO UNIQUE (codigo)
);

CREATE TABLE CAT_ITEM_CATALOGO (
    id_item_catalogo BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_catalogo BIGINT NOT NULL,
    id_item_padre BIGINT,
    codigo VARCHAR(50) NOT NULL,
    nombre VARCHAR(120) NOT NULL,
    descripcion VARCHAR(500),
    orden INTEGER NOT NULL DEFAULT 0,
    activo BOOLEAN NOT NULL DEFAULT TRUE,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_CAT_ITEM_CATALOGO PRIMARY KEY (id_item_catalogo),
    CONSTRAINT FK_CAT_ITEM_CATALOGO_CATALOGO FOREIGN KEY (id_catalogo)
        REFERENCES CAT_CATALOGO (id_catalogo),
    CONSTRAINT FK_CAT_ITEM_CATALOGO_PADRE FOREIGN KEY (id_item_padre)
        REFERENCES CAT_ITEM_CATALOGO (id_item_catalogo),
    CONSTRAINT UK_CAT_ITEM_CATALOGO_CODIGO UNIQUE (id_catalogo, codigo),
    CONSTRAINT CK_CAT_ITEM_CATALOGO_ORDEN CHECK (orden >= 0)
);

CREATE INDEX IX_CAT_ITEM_CATALOGO_CATALOGO ON CAT_ITEM_CATALOGO(id_catalogo);
CREATE INDEX IX_CAT_ITEM_CATALOGO_PADRE ON CAT_ITEM_CATALOGO(id_item_padre);

CREATE TABLE CFG_PARAMETRO (
    id_parametro BIGINT GENERATED BY DEFAULT AS IDENTITY,
    codigo VARCHAR(80) NOT NULL,
    nombre VARCHAR(150) NOT NULL,
    descripcion VARCHAR(500),
    tipo_dato VARCHAR(20) NOT NULL,
    valor_entero BIGINT,
    valor_decimal NUMERIC(18,6),
    valor_booleano BOOLEAN,
    valor_texto VARCHAR(1000),
    vigente_desde TIMESTAMPTZ,
    vigente_hasta TIMESTAMPTZ,
    activo BOOLEAN NOT NULL DEFAULT TRUE,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_CFG_PARAMETRO PRIMARY KEY (id_parametro),
    CONSTRAINT UK_CFG_PARAMETRO_CODIGO UNIQUE (codigo),
    CONSTRAINT CK_CFG_PARAMETRO_TIPO CHECK (tipo_dato IN ('ENTERO','DECIMAL','BOOLEANO','TEXTO')),
    CONSTRAINT CK_CFG_PARAMETRO_VIGENCIA CHECK (vigente_hasta IS NULL OR vigente_desde IS NULL OR vigente_hasta >= vigente_desde)
);

CREATE TABLE CFG_POLITICA_ADAPTACION (
    id_politica_adaptacion BIGINT GENERATED BY DEFAULT AS IDENTITY,
    codigo VARCHAR(60) NOT NULL,
    nombre VARCHAR(150) NOT NULL,
    descripcion VARCHAR(500),
    version_politica INTEGER NOT NULL,
    id_item_modo_adaptacion BIGINT NOT NULL,
    tamano_ventana_intentos SMALLINT NOT NULL DEFAULT 5,
    vigente_desde TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    vigente_hasta TIMESTAMPTZ,
    activa BOOLEAN NOT NULL DEFAULT TRUE,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_CFG_POLITICA_ADAPTACION PRIMARY KEY (id_politica_adaptacion),
    CONSTRAINT FK_CFG_POLITICA_ADAPTACION_MODO FOREIGN KEY (id_item_modo_adaptacion)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT UK_CFG_POLITICA_ADAPTACION_VERSION UNIQUE (codigo, version_politica),
    CONSTRAINT CK_CFG_POLITICA_ADAPTACION_VENTANA CHECK (tamano_ventana_intentos BETWEEN 1 AND 50),
    CONSTRAINT CK_CFG_POLITICA_ADAPTACION_VIGENCIA CHECK (vigente_hasta IS NULL OR vigente_hasta >= vigente_desde)
);

CREATE INDEX IX_CFG_POLITICA_ADAPTACION_MODO ON CFG_POLITICA_ADAPTACION(id_item_modo_adaptacion);

CREATE TABLE CFG_REGLA_ADAPTACION (
    id_regla_adaptacion BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_politica_adaptacion BIGINT NOT NULL,
    codigo VARCHAR(60) NOT NULL,
    nombre VARCHAR(150) NOT NULL,
    prioridad INTEGER NOT NULL,
    porcentaje_acierto_min NUMERIC(5,4),
    porcentaje_acierto_max NUMERIC(5,4),
    tiempo_promedio_min_ms INTEGER,
    tiempo_promedio_max_ms INTEGER,
    racha_aciertos_min SMALLINT,
    racha_errores_min SMALLINT,
    id_item_nivel_rendimiento BIGINT NOT NULL,
    id_item_accion_principal BIGINT NOT NULL,
    id_item_tipo_ejercicio_destino BIGINT,
    habilitar_pista BOOLEAN NOT NULL DEFAULT FALSE,
    vigente_desde TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    vigente_hasta TIMESTAMPTZ,
    activa BOOLEAN NOT NULL DEFAULT TRUE,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_CFG_REGLA_ADAPTACION PRIMARY KEY (id_regla_adaptacion),
    CONSTRAINT FK_CFG_REGLA_ADAPTACION_POLITICA FOREIGN KEY (id_politica_adaptacion)
        REFERENCES CFG_POLITICA_ADAPTACION(id_politica_adaptacion),
    CONSTRAINT FK_CFG_REGLA_ADAPTACION_RENDIMIENTO FOREIGN KEY (id_item_nivel_rendimiento)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT FK_CFG_REGLA_ADAPTACION_ACCION FOREIGN KEY (id_item_accion_principal)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT FK_CFG_REGLA_ADAPTACION_TIPO_DESTINO FOREIGN KEY (id_item_tipo_ejercicio_destino)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT UK_CFG_REGLA_ADAPTACION_CODIGO UNIQUE (id_politica_adaptacion, codigo),
    CONSTRAINT CK_CFG_REGLA_ADAPTACION_PRIORIDAD CHECK (prioridad > 0),
    CONSTRAINT CK_CFG_REGLA_ADAPTACION_ACIERTO_MIN CHECK (porcentaje_acierto_min IS NULL OR porcentaje_acierto_min BETWEEN 0 AND 1),
    CONSTRAINT CK_CFG_REGLA_ADAPTACION_ACIERTO_MAX CHECK (porcentaje_acierto_max IS NULL OR porcentaje_acierto_max BETWEEN 0 AND 1),
    CONSTRAINT CK_CFG_REGLA_ADAPTACION_ACIERTO_RANGO CHECK (
        porcentaje_acierto_min IS NULL OR porcentaje_acierto_max IS NULL OR porcentaje_acierto_max >= porcentaje_acierto_min
    ),
    CONSTRAINT CK_CFG_REGLA_ADAPTACION_TIEMPO CHECK (
        (tiempo_promedio_min_ms IS NULL OR tiempo_promedio_min_ms >= 0)
        AND (tiempo_promedio_max_ms IS NULL OR tiempo_promedio_max_ms >= 0)
        AND (tiempo_promedio_min_ms IS NULL OR tiempo_promedio_max_ms IS NULL OR tiempo_promedio_max_ms >= tiempo_promedio_min_ms)
    ),
    CONSTRAINT CK_CFG_REGLA_ADAPTACION_RACHAS CHECK (
        (racha_aciertos_min IS NULL OR racha_aciertos_min >= 0)
        AND (racha_errores_min IS NULL OR racha_errores_min >= 0)
    ),
    CONSTRAINT CK_CFG_REGLA_ADAPTACION_VIGENCIA CHECK (vigente_hasta IS NULL OR vigente_hasta >= vigente_desde)
);

CREATE INDEX IX_CFG_REGLA_ADAPTACION_POLITICA ON CFG_REGLA_ADAPTACION(id_politica_adaptacion);
CREATE INDEX IX_CFG_REGLA_ADAPTACION_RENDIMIENTO ON CFG_REGLA_ADAPTACION(id_item_nivel_rendimiento);
CREATE INDEX IX_CFG_REGLA_ADAPTACION_ACCION ON CFG_REGLA_ADAPTACION(id_item_accion_principal);

CREATE TABLE ACA_ASIGNATURA (
    id_asignatura BIGINT GENERATED BY DEFAULT AS IDENTITY,
    codigo VARCHAR(40) NOT NULL,
    nombre VARCHAR(150) NOT NULL,
    descripcion VARCHAR(500),
    activo BOOLEAN NOT NULL DEFAULT TRUE,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_ACA_ASIGNATURA PRIMARY KEY (id_asignatura),
    CONSTRAINT UK_ACA_ASIGNATURA_CODIGO UNIQUE (codigo)
);

CREATE TABLE ACA_TEMA (
    id_tema BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_asignatura BIGINT NOT NULL,
    id_tema_padre BIGINT,
    codigo VARCHAR(50) NOT NULL,
    nombre VARCHAR(150) NOT NULL,
    descripcion VARCHAR(500),
    orden INTEGER NOT NULL DEFAULT 0,
    activo BOOLEAN NOT NULL DEFAULT TRUE,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_ACA_TEMA PRIMARY KEY (id_tema),
    CONSTRAINT FK_ACA_TEMA_ASIGNATURA FOREIGN KEY (id_asignatura)
        REFERENCES ACA_ASIGNATURA(id_asignatura),
    CONSTRAINT FK_ACA_TEMA_PADRE FOREIGN KEY (id_tema_padre)
        REFERENCES ACA_TEMA(id_tema),
    CONSTRAINT UK_ACA_TEMA_CODIGO UNIQUE (id_asignatura, codigo),
    CONSTRAINT CK_ACA_TEMA_ORDEN CHECK (orden >= 0)
);

CREATE INDEX IX_ACA_TEMA_ASIGNATURA ON ACA_TEMA(id_asignatura);
CREATE INDEX IX_ACA_TEMA_PADRE ON ACA_TEMA(id_tema_padre);

CREATE TABLE BAN_EJERCICIO (
    id_ejercicio BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_tema BIGINT NOT NULL,
    codigo VARCHAR(60) NOT NULL,
    enunciado TEXT NOT NULL,
    id_item_tipo_ejercicio BIGINT NOT NULL,
    id_item_dificultad BIGINT NOT NULL,
    id_item_estado_ejercicio BIGINT NOT NULL,
    explicacion TEXT,
    tiempo_objetivo_segundos INTEGER,
    puntaje_base NUMERIC(8,2) NOT NULL DEFAULT 1.00,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_BAN_EJERCICIO PRIMARY KEY (id_ejercicio),
    CONSTRAINT FK_BAN_EJERCICIO_TEMA FOREIGN KEY (id_tema)
        REFERENCES ACA_TEMA(id_tema),
    CONSTRAINT FK_BAN_EJERCICIO_TIPO FOREIGN KEY (id_item_tipo_ejercicio)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT FK_BAN_EJERCICIO_DIFICULTAD FOREIGN KEY (id_item_dificultad)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT FK_BAN_EJERCICIO_ESTADO FOREIGN KEY (id_item_estado_ejercicio)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT UK_BAN_EJERCICIO_CODIGO UNIQUE (codigo),
    CONSTRAINT CK_BAN_EJERCICIO_TIEMPO CHECK (tiempo_objetivo_segundos IS NULL OR tiempo_objetivo_segundos > 0),
    CONSTRAINT CK_BAN_EJERCICIO_PUNTAJE CHECK (puntaje_base >= 0)
);

CREATE INDEX IX_BAN_EJERCICIO_TEMA ON BAN_EJERCICIO(id_tema);
CREATE INDEX IX_BAN_EJERCICIO_DIFICULTAD ON BAN_EJERCICIO(id_item_dificultad);
CREATE INDEX IX_BAN_EJERCICIO_TIPO ON BAN_EJERCICIO(id_item_tipo_ejercicio);
CREATE INDEX IX_BAN_EJERCICIO_ESTADO ON BAN_EJERCICIO(id_item_estado_ejercicio);

CREATE TABLE BAN_OPCION_EJERCICIO (
    id_opcion_ejercicio BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_ejercicio BIGINT NOT NULL,
    codigo VARCHAR(20) NOT NULL,
    texto TEXT NOT NULL,
    es_correcta BOOLEAN NOT NULL DEFAULT FALSE,
    orden INTEGER NOT NULL,
    retroalimentacion TEXT,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_BAN_OPCION_EJERCICIO PRIMARY KEY (id_opcion_ejercicio),
    CONSTRAINT FK_BAN_OPCION_EJERCICIO_EJERCICIO FOREIGN KEY (id_ejercicio)
        REFERENCES BAN_EJERCICIO(id_ejercicio),
    CONSTRAINT UK_BAN_OPCION_EJERCICIO_CODIGO UNIQUE (id_ejercicio, codigo),
    CONSTRAINT UK_BAN_OPCION_EJERCICIO_ORDEN UNIQUE (id_ejercicio, orden),
    CONSTRAINT CK_BAN_OPCION_EJERCICIO_ORDEN CHECK (orden > 0)
);

CREATE INDEX IX_BAN_OPCION_EJERCICIO_EJERCICIO ON BAN_OPCION_EJERCICIO(id_ejercicio);

CREATE TABLE BAN_PISTA_EJERCICIO (
    id_pista_ejercicio BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_ejercicio BIGINT NOT NULL,
    orden INTEGER NOT NULL,
    texto TEXT NOT NULL,
    penalizacion_puntaje NUMERIC(8,2) NOT NULL DEFAULT 0,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_BAN_PISTA_EJERCICIO PRIMARY KEY (id_pista_ejercicio),
    CONSTRAINT FK_BAN_PISTA_EJERCICIO_EJERCICIO FOREIGN KEY (id_ejercicio)
        REFERENCES BAN_EJERCICIO(id_ejercicio),
    CONSTRAINT UK_BAN_PISTA_EJERCICIO_ORDEN UNIQUE (id_ejercicio, orden),
    CONSTRAINT CK_BAN_PISTA_EJERCICIO_ORDEN CHECK (orden > 0),
    CONSTRAINT CK_BAN_PISTA_EJERCICIO_PENALIZACION CHECK (penalizacion_puntaje >= 0)
);

CREATE INDEX IX_BAN_PISTA_EJERCICIO_EJERCICIO ON BAN_PISTA_EJERCICIO(id_ejercicio);

CREATE TABLE APR_ESTUDIANTE (
    id_estudiante BIGINT GENERATED BY DEFAULT AS IDENTITY,
    codigo VARCHAR(50) NOT NULL,
    nombre_mostrado VARCHAR(150) NOT NULL,
    id_item_estado_estudiante BIGINT NOT NULL,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_APR_ESTUDIANTE PRIMARY KEY (id_estudiante),
    CONSTRAINT FK_APR_ESTUDIANTE_ESTADO FOREIGN KEY (id_item_estado_estudiante)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT UK_APR_ESTUDIANTE_CODIGO UNIQUE (codigo)
);

CREATE INDEX IX_APR_ESTUDIANTE_ESTADO ON APR_ESTUDIANTE(id_item_estado_estudiante);

CREATE TABLE APR_PROGRESO_TEMA (
    id_progreso_tema BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_estudiante BIGINT NOT NULL,
    id_tema BIGINT NOT NULL,
    id_item_dificultad_actual BIGINT NOT NULL,
    total_intentos INTEGER NOT NULL DEFAULT 0,
    total_aciertos INTEGER NOT NULL DEFAULT 0,
    porcentaje_acierto NUMERIC(5,4) NOT NULL DEFAULT 0,
    tiempo_promedio_ms INTEGER NOT NULL DEFAULT 0,
    racha_aciertos_actual SMALLINT NOT NULL DEFAULT 0,
    racha_errores_actual SMALLINT NOT NULL DEFAULT 0,
    fecha_ultimo_intento TIMESTAMPTZ,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_APR_PROGRESO_TEMA PRIMARY KEY (id_progreso_tema),
    CONSTRAINT FK_APR_PROGRESO_TEMA_ESTUDIANTE FOREIGN KEY (id_estudiante)
        REFERENCES APR_ESTUDIANTE(id_estudiante),
    CONSTRAINT FK_APR_PROGRESO_TEMA_TEMA FOREIGN KEY (id_tema)
        REFERENCES ACA_TEMA(id_tema),
    CONSTRAINT FK_APR_PROGRESO_TEMA_DIFICULTAD FOREIGN KEY (id_item_dificultad_actual)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT UK_APR_PROGRESO_TEMA UNIQUE (id_estudiante, id_tema),
    CONSTRAINT CK_APR_PROGRESO_TEMA_CONTADORES CHECK (
        total_intentos >= 0 AND total_aciertos >= 0 AND total_aciertos <= total_intentos
    ),
    CONSTRAINT CK_APR_PROGRESO_TEMA_ACIERTO CHECK (porcentaje_acierto BETWEEN 0 AND 1),
    CONSTRAINT CK_APR_PROGRESO_TEMA_TIEMPO CHECK (tiempo_promedio_ms >= 0),
    CONSTRAINT CK_APR_PROGRESO_TEMA_RACHAS CHECK (racha_aciertos_actual >= 0 AND racha_errores_actual >= 0)
);

CREATE INDEX IX_APR_PROGRESO_TEMA_ESTUDIANTE ON APR_PROGRESO_TEMA(id_estudiante);
CREATE INDEX IX_APR_PROGRESO_TEMA_TEMA ON APR_PROGRESO_TEMA(id_tema);

CREATE TABLE PRA_SESION_PRACTICA (
    id_sesion_practica BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_estudiante BIGINT NOT NULL,
    id_tema BIGINT NOT NULL,
    id_politica_adaptacion BIGINT NOT NULL,
    id_item_estado_sesion BIGINT NOT NULL,
    fecha_inicio TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    fecha_fin TIMESTAMPTZ,
    cantidad_intentos INTEGER NOT NULL DEFAULT 0,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_PRA_SESION_PRACTICA PRIMARY KEY (id_sesion_practica),
    CONSTRAINT FK_PRA_SESION_PRACTICA_ESTUDIANTE FOREIGN KEY (id_estudiante)
        REFERENCES APR_ESTUDIANTE(id_estudiante),
    CONSTRAINT FK_PRA_SESION_PRACTICA_TEMA FOREIGN KEY (id_tema)
        REFERENCES ACA_TEMA(id_tema),
    CONSTRAINT FK_PRA_SESION_PRACTICA_POLITICA FOREIGN KEY (id_politica_adaptacion)
        REFERENCES CFG_POLITICA_ADAPTACION(id_politica_adaptacion),
    CONSTRAINT FK_PRA_SESION_PRACTICA_ESTADO FOREIGN KEY (id_item_estado_sesion)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT CK_PRA_SESION_PRACTICA_FECHAS CHECK (fecha_fin IS NULL OR fecha_fin >= fecha_inicio),
    CONSTRAINT CK_PRA_SESION_PRACTICA_CANTIDAD CHECK (cantidad_intentos >= 0)
);

CREATE INDEX IX_PRA_SESION_PRACTICA_ESTUDIANTE ON PRA_SESION_PRACTICA(id_estudiante);
CREATE INDEX IX_PRA_SESION_PRACTICA_TEMA ON PRA_SESION_PRACTICA(id_tema);
CREATE INDEX IX_PRA_SESION_PRACTICA_POLITICA ON PRA_SESION_PRACTICA(id_politica_adaptacion);
CREATE INDEX IX_PRA_SESION_PRACTICA_ESTADO ON PRA_SESION_PRACTICA(id_item_estado_sesion);

CREATE TABLE PRA_INTENTO (
    id_intento BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_sesion_practica BIGINT NOT NULL,
    id_ejercicio BIGINT NOT NULL,
    numero_orden INTEGER NOT NULL,
    fecha_inicio TIMESTAMPTZ NOT NULL,
    fecha_fin TIMESTAMPTZ NOT NULL,
    tiempo_respuesta_ms INTEGER NOT NULL,
    id_item_resultado_intento BIGINT NOT NULL,
    puntaje_obtenido NUMERIC(8,2) NOT NULL DEFAULT 0,
    uso_pista BOOLEAN NOT NULL DEFAULT FALSE,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_PRA_INTENTO PRIMARY KEY (id_intento),
    CONSTRAINT FK_PRA_INTENTO_SESION FOREIGN KEY (id_sesion_practica)
        REFERENCES PRA_SESION_PRACTICA(id_sesion_practica),
    CONSTRAINT FK_PRA_INTENTO_EJERCICIO FOREIGN KEY (id_ejercicio)
        REFERENCES BAN_EJERCICIO(id_ejercicio),
    CONSTRAINT FK_PRA_INTENTO_RESULTADO FOREIGN KEY (id_item_resultado_intento)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT UK_PRA_INTENTO_ORDEN UNIQUE (id_sesion_practica, numero_orden),
    CONSTRAINT CK_PRA_INTENTO_ORDEN CHECK (numero_orden > 0),
    CONSTRAINT CK_PRA_INTENTO_FECHAS CHECK (fecha_fin >= fecha_inicio),
    CONSTRAINT CK_PRA_INTENTO_TIEMPO CHECK (tiempo_respuesta_ms >= 0),
    CONSTRAINT CK_PRA_INTENTO_PUNTAJE CHECK (puntaje_obtenido >= 0)
);

CREATE INDEX IX_PRA_INTENTO_SESION ON PRA_INTENTO(id_sesion_practica);
CREATE INDEX IX_PRA_INTENTO_EJERCICIO ON PRA_INTENTO(id_ejercicio);
CREATE INDEX IX_PRA_INTENTO_RESULTADO ON PRA_INTENTO(id_item_resultado_intento);

CREATE TABLE PRA_RESPUESTA (
    id_respuesta BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_intento BIGINT NOT NULL,
    texto_respuesta TEXT,
    fecha_respuesta TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_PRA_RESPUESTA PRIMARY KEY (id_respuesta),
    CONSTRAINT FK_PRA_RESPUESTA_INTENTO FOREIGN KEY (id_intento)
        REFERENCES PRA_INTENTO(id_intento),
    CONSTRAINT UK_PRA_RESPUESTA_INTENTO UNIQUE (id_intento)
);

CREATE INDEX IX_PRA_RESPUESTA_INTENTO ON PRA_RESPUESTA(id_intento);

CREATE TABLE PRA_RESPUESTA_OPCION (
    id_respuesta BIGINT NOT NULL,
    id_opcion_ejercicio BIGINT NOT NULL,
    CONSTRAINT PK_PRA_RESPUESTA_OPCION PRIMARY KEY (id_respuesta, id_opcion_ejercicio),
    CONSTRAINT FK_PRA_RESPUESTA_OPCION_RESPUESTA FOREIGN KEY (id_respuesta)
        REFERENCES PRA_RESPUESTA(id_respuesta),
    CONSTRAINT FK_PRA_RESPUESTA_OPCION_OPCION FOREIGN KEY (id_opcion_ejercicio)
        REFERENCES BAN_OPCION_EJERCICIO(id_opcion_ejercicio)
);

CREATE INDEX IX_PRA_RESPUESTA_OPCION_OPCION ON PRA_RESPUESTA_OPCION(id_opcion_ejercicio);

CREATE TABLE ADP_CONTEXTO_APRENDIZAJE (
    id_contexto_aprendizaje BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_intento_disparador BIGINT NOT NULL,
    id_estudiante BIGINT NOT NULL,
    id_tema BIGINT NOT NULL,
    id_politica_adaptacion BIGINT NOT NULL,
    numero_intentos_ventana SMALLINT NOT NULL,
    total_aciertos_ventana SMALLINT NOT NULL,
    porcentaje_acierto NUMERIC(5,4) NOT NULL,
    tiempo_promedio_ms INTEGER NOT NULL,
    racha_aciertos SMALLINT NOT NULL,
    racha_errores SMALLINT NOT NULL,
    id_item_dificultad_actual BIGINT NOT NULL,
    id_item_tipo_ejercicio_actual BIGINT NOT NULL,
    puntaje_rendimiento NUMERIC(8,6),
    fecha_calculo TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT PK_ADP_CONTEXTO_APRENDIZAJE PRIMARY KEY (id_contexto_aprendizaje),
    CONSTRAINT FK_ADP_CONTEXTO_APRENDIZAJE_INTENTO FOREIGN KEY (id_intento_disparador)
        REFERENCES PRA_INTENTO(id_intento),
    CONSTRAINT FK_ADP_CONTEXTO_APRENDIZAJE_ESTUDIANTE FOREIGN KEY (id_estudiante)
        REFERENCES APR_ESTUDIANTE(id_estudiante),
    CONSTRAINT FK_ADP_CONTEXTO_APRENDIZAJE_TEMA FOREIGN KEY (id_tema)
        REFERENCES ACA_TEMA(id_tema),
    CONSTRAINT FK_ADP_CONTEXTO_APRENDIZAJE_POLITICA FOREIGN KEY (id_politica_adaptacion)
        REFERENCES CFG_POLITICA_ADAPTACION(id_politica_adaptacion),
    CONSTRAINT FK_ADP_CONTEXTO_APRENDIZAJE_DIFICULTAD FOREIGN KEY (id_item_dificultad_actual)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT FK_ADP_CONTEXTO_APRENDIZAJE_TIPO FOREIGN KEY (id_item_tipo_ejercicio_actual)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT UK_ADP_CONTEXTO_APRENDIZAJE_INTENTO UNIQUE (id_intento_disparador),
    CONSTRAINT CK_ADP_CONTEXTO_APRENDIZAJE_VENTANA CHECK (
        numero_intentos_ventana > 0
        AND total_aciertos_ventana >= 0
        AND total_aciertos_ventana <= numero_intentos_ventana
    ),
    CONSTRAINT CK_ADP_CONTEXTO_APRENDIZAJE_ACIERTO CHECK (porcentaje_acierto BETWEEN 0 AND 1),
    CONSTRAINT CK_ADP_CONTEXTO_APRENDIZAJE_TIEMPO CHECK (tiempo_promedio_ms >= 0),
    CONSTRAINT CK_ADP_CONTEXTO_APRENDIZAJE_RACHAS CHECK (racha_aciertos >= 0 AND racha_errores >= 0),
    CONSTRAINT CK_ADP_CONTEXTO_APRENDIZAJE_SCORE CHECK (puntaje_rendimiento IS NULL OR puntaje_rendimiento BETWEEN 0 AND 1)
);

CREATE INDEX IX_ADP_CONTEXTO_APRENDIZAJE_ESTUDIANTE ON ADP_CONTEXTO_APRENDIZAJE(id_estudiante);
CREATE INDEX IX_ADP_CONTEXTO_APRENDIZAJE_TEMA ON ADP_CONTEXTO_APRENDIZAJE(id_tema);
CREATE INDEX IX_ADP_CONTEXTO_APRENDIZAJE_POLITICA ON ADP_CONTEXTO_APRENDIZAJE(id_politica_adaptacion);

CREATE TABLE ADP_EVENTO_ADAPTACION (
    id_evento_adaptacion BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_contexto_aprendizaje BIGINT NOT NULL,
    id_regla_adaptacion BIGINT,
    id_item_origen_decision BIGINT NOT NULL,
    id_item_nivel_rendimiento BIGINT NOT NULL,
    id_item_accion_principal BIGINT NOT NULL,
    id_item_dificultad_anterior BIGINT NOT NULL,
    id_item_dificultad_nueva BIGINT NOT NULL,
    id_item_tipo_ejercicio_anterior BIGINT,
    id_item_tipo_ejercicio_nuevo BIGINT,
    motivo VARCHAR(1000) NOT NULL,
    version_motor VARCHAR(40) NOT NULL,
    fecha_decision TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    aplicacion_exitosa BOOLEAN NOT NULL DEFAULT TRUE,
    fecha_creacion TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    usuario_creacion VARCHAR(100) NOT NULL DEFAULT 'SYSTEM',
    fecha_modificacion TIMESTAMPTZ,
    usuario_modificacion VARCHAR(100),
    version_registro BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT PK_ADP_EVENTO_ADAPTACION PRIMARY KEY (id_evento_adaptacion),
    CONSTRAINT FK_ADP_EVENTO_ADAPTACION_CONTEXTO FOREIGN KEY (id_contexto_aprendizaje)
        REFERENCES ADP_CONTEXTO_APRENDIZAJE(id_contexto_aprendizaje),
    CONSTRAINT FK_ADP_EVENTO_ADAPTACION_REGLA FOREIGN KEY (id_regla_adaptacion)
        REFERENCES CFG_REGLA_ADAPTACION(id_regla_adaptacion),
    CONSTRAINT FK_ADP_EVENTO_ADAPTACION_ORIGEN FOREIGN KEY (id_item_origen_decision)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT FK_ADP_EVENTO_ADAPTACION_RENDIMIENTO FOREIGN KEY (id_item_nivel_rendimiento)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT FK_ADP_EVENTO_ADAPTACION_ACCION FOREIGN KEY (id_item_accion_principal)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT FK_ADP_EVENTO_ADAPTACION_DIF_ANT FOREIGN KEY (id_item_dificultad_anterior)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT FK_ADP_EVENTO_ADAPTACION_DIF_NUEVA FOREIGN KEY (id_item_dificultad_nueva)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT FK_ADP_EVENTO_ADAPTACION_TIPO_ANT FOREIGN KEY (id_item_tipo_ejercicio_anterior)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT FK_ADP_EVENTO_ADAPTACION_TIPO_NUEVO FOREIGN KEY (id_item_tipo_ejercicio_nuevo)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT UK_ADP_EVENTO_ADAPTACION_CONTEXTO UNIQUE (id_contexto_aprendizaje)
);

CREATE INDEX IX_ADP_EVENTO_ADAPTACION_REGLA ON ADP_EVENTO_ADAPTACION(id_regla_adaptacion);
CREATE INDEX IX_ADP_EVENTO_ADAPTACION_ORIGEN ON ADP_EVENTO_ADAPTACION(id_item_origen_decision);

CREATE TABLE ADP_ACCION_EVENTO (
    id_evento_adaptacion BIGINT NOT NULL,
    secuencia SMALLINT NOT NULL,
    id_item_accion_adaptacion BIGINT NOT NULL,
    detalle VARCHAR(500),
    valor_anterior VARCHAR(200),
    valor_nuevo VARCHAR(200),
    ejecutada BOOLEAN NOT NULL DEFAULT TRUE,
    CONSTRAINT PK_ADP_ACCION_EVENTO PRIMARY KEY (id_evento_adaptacion, secuencia),
    CONSTRAINT FK_ADP_ACCION_EVENTO_EVENTO FOREIGN KEY (id_evento_adaptacion)
        REFERENCES ADP_EVENTO_ADAPTACION(id_evento_adaptacion),
    CONSTRAINT FK_ADP_ACCION_EVENTO_ACCION FOREIGN KEY (id_item_accion_adaptacion)
        REFERENCES CAT_ITEM_CATALOGO(id_item_catalogo),
    CONSTRAINT CK_ADP_ACCION_EVENTO_SECUENCIA CHECK (secuencia > 0)
);

CREATE INDEX IX_ADP_ACCION_EVENTO_ACCION ON ADP_ACCION_EVENTO(id_item_accion_adaptacion);

COMMENT ON TABLE CAT_CATALOGO IS 'Definición paramétrica de clasificaciones del sistema.';
COMMENT ON TABLE CAT_ITEM_CATALOGO IS 'Valores permitidos de cada catálogo.';
COMMENT ON TABLE CFG_PARAMETRO IS 'Parámetros configurables del comportamiento.';
COMMENT ON TABLE PRA_INTENTO IS 'Evento real de resolución de un ejercicio.';
COMMENT ON TABLE ADP_CONTEXTO_APRENDIZAJE IS 'Snapshot del contexto utilizado para una decisión.';
COMMENT ON TABLE ADP_EVENTO_ADAPTACION IS 'Evento auditable de decisión adaptativa.';
