erDiagram
    CAT_CATALOGO ||--o{ CAT_ITEM_CATALOGO : contiene
    CFG_POLITICA_ADAPTACION ||--o{ CFG_REGLA_ADAPTACION : define
    ACA_ASIGNATURA ||--o{ ACA_TEMA : contiene
    ACA_TEMA ||--o{ BAN_EJERCICIO : agrupa
    BAN_EJERCICIO ||--o{ BAN_OPCION_EJERCICIO : ofrece
    BAN_EJERCICIO ||--o{ BAN_PISTA_EJERCICIO : posee
    APR_ESTUDIANTE ||--o{ APR_PROGRESO_TEMA : mantiene
    APR_ESTUDIANTE ||--o{ PRA_SESION_PRACTICA : inicia
    PRA_SESION_PRACTICA ||--o{ PRA_INTENTO : contiene
    BAN_EJERCICIO ||--o{ PRA_INTENTO : resuelto_en
    PRA_INTENTO ||--|| PRA_RESPUESTA : recibe
    PRA_RESPUESTA ||--o{ PRA_RESPUESTA_OPCION : selecciona
    PRA_INTENTO ||--o| ADP_CONTEXTO_APRENDIZAJE : dispara
    ADP_CONTEXTO_APRENDIZAJE ||--o| ADP_EVENTO_ADAPTACION : produce
    ADP_EVENTO_ADAPTACION ||--o{ ADP_ACCION_EVENTO : ejecuta
